Conversation manager kinda working. Fixed layout bug on spiels screen.

--- a/src/ui/TextConsole.module.css
+++ b/src/ui/TextConsole.module.css
@@ -2,4 +2,5 @@
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
+    flex-grow: 1;
 }
